--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-elements": "^3.4.2",
     "react-native-screens": "~3.4.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-linear-gradient": "~9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
